# MoVE

./: .gitattributes  .gitignore  INFERENCE_README.md  README.md  README_PRODUCTION.md  check_data.py  debug_model.py  debug_move_large.py  debug_training.py  inference_optimized.py  move.py  move_large.py  perplexity_comparison.json  pyproject.toml  requirements.txt
.trae/: .ignore
configs/: move_1b_rtx4090.json  move_500m_rtx4090.json  move_700m_rtx4090.json
data/arxiv_dataset_500m/: metadata.json
deploy/: api_server.py  chat_interface.html
modules/: attn_approx.py  ffn_moe.py  pos_gen.py  token_embed.py
monitoring/: performance_monitor.py
monitoring/templates/: dashboard.html
move/: __init__.py  integration.py
move/components/: __init__.py  attention.py  coordinator.py  decoder.py  embedding.py  moe.py
move/evaluation/: __init__.py  validation.py
scripts/: debug_dataset.py  debug_dataset_nan.py  download_data.py  eval_benchmarks.py  eval_ppl.py  example_inference.py  extract_vectors.py  inference_move.py  optimize_1b_for_rtx4090.py  prepare_arxiv_dataset.py  prepare_large_dataset.py  setup_baseline.py  test_move_integration.py  test_training_loop.py  tokenise.py  train_attn_approx.py  train_ffn_moe.py  train_large.py  train_minimal_transformer.py  train_move.py  train_move_1b_arxiv.py  train_move_300m_arxiv.py  train_move_300m_stable.py  train_move_500m_arxiv.py  train_move_500m_arxiv_optimized.py  train_move_llama_transfer.py  train_move_pretokenized.py  train_pos_gen.py  train_pretokenized_minimal.py  train_token_embed.py
(+8 files in other folders)
